# goods_dash

./: .gitignore  README.md
backend/: alembic.ini  main.py  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 4d03663702d7_init.py
backend/seed/: clear_data.py  consonats.py  orders.py  products.py  seed.py  users.py  utils.py
backend/src/core/: constants.py
backend/src/db/: database.py  init_db.py  session.py
backend/src/dependencies/: dependencies.py
backend/src/models/: __init__.py  order.py  order_item.py  product.py  user.py
backend/src/repositories/: analytics_repository.py  base.py  dashboard_repository.py  orders_repository.py  product_repository.py  user_repository.py
backend/src/routers/: __init__.py  analytics.py  dashboard.py  orders.py  product.py  users.py
backend/src/schemes/: analytics.py  common.py  dashboard.py  filters.py  order.py  product.py  query.py  search.py  user.py
backend/src/services/: analytics_service.py  dashboard_service.py  orders_service.py  product_service.py  user_service.py
backend/src/utils/: user_errors.py
frontend/: app.py
frontend/components/: footer.py  header.py  kpi_card.py  pagination.py  sidebar.py
frontend/pages/: analytics.py  dashboard.py  orders.py  products.py  users.py
frontend/utils/: api_client.py  formatting.py  state.py
